unpackaged/objects/copado__Test_Script_Step__c.object
<CustomObject>
	<description>The individual template step for a test script</description>
	<fields>
		<fullName>copado__Action_Description__c</fullName>
		<label>Action/Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Expected_Result__c</fullName>
		<label>Expected Result</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Guidance_notes__c</fullName>
		<label>Guidance notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Order__c</fullName>
		<label>Order</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Result__c</fullName>
		<label>Result</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Passed</fullName>
				</value>
				<value>
					<fullName>Passed with comments</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Step_Title__c</fullName>
		<label>Step Title</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Test_Script__c</fullName>
		<label>Test Script</label>
		<referenceTo>copado__Test_Script__c</referenceTo>
		<relationshipName>Script_Steps</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Test Script Step</label>
	<nameField>
		<displayFormat>SS-{000000}</displayFormat>
		<label>Script Step Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Test Script Steps</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>